    audio source when the song starts and name the file according to active tracks

* Implement a note frequency dialog
  - Tools => Note Frequencies

* Improvements to column data selection
  - Allow selecting data across multiple columns (keyboard only for now)
  - Allow selecting data using the mouse

Bug fixes:

Other:

0.11.0
======

Release date:

Fri, 29 Aug 2025 21:17:38 +0300

New features:

* Allow transposing by +2/-2 semitones

* Fix GitHub Issue #24: Implement velocity interpolation on track-level

Bug fixes:

* Fix GitHub Issue #21: Clicking on the empty area of a note column won't set focus

* Fix GitHub Issue #22: MIDI transport events sent event if disabled

0.10.0
======

Release date:

Mon, 21 Jul 2025 20:31:52 +0300

New features:

* Fix GitHub Issue #10: Implement support for a MIDI controller keyboard
  - Edit => Settings => MIDI => Controller
  - Supports Note ON/OFF, Pitch Bend, MIDI CC (also modulation wheel), Transport (Play/Stop)

* Implement MIDI transport events
  - Noteahead now sends MIDI Start/Stop

* Implement a delay time calculator dialog
  - Tools => Delay time calculator

* Strike out recent files that have been vanished

* VideoGenerator
  - Implement a new video animation type "Bars"
  - Ensure that input files exist
  - Support image rotation in video generation

Bug fixes:

* Fix GitHub Issue #14: Rewinding a song assumes that track with index 0 exists

* Fix GitHub Issue #17: Window title not reset on a new song

* Eliminate a redundant call to PlayerWorker::stop()

Other:

* More logically maintain current track on track deletion

0.9.0
=====

Release date:

Tue, 10 Jun 2025 22:14:09 +0300

New features:

* Render lines in a ListView instead of manually managed objects
  - This is a big and fundamental refactoring effort and makes scrolling
    way smoother also on older Qt version. Also the update logic is now less
    prone to bugs as more stuff is handled by the view model in C++.
