@@ -18,6 +18,8 @@ New features:
 
 Bug fixes:
 
+* Take transpose into account when playing live notes
+
 Other:
 
 0.11.0
